[package]
name = "swell_history_web"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = '4'
actix-files = '0.6.2'
rusqlite  = { version = "0.28.0", features = ["load_extension"] }
