[package]
name = "swell_history_web"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web   = '4'
actix-files = '0.6.2'
r2d2        = '0.8'
r2d2_sqlite = '0.20'
rusqlite    = { version = "0.27.0", features = ["load_extension"] }
serde = { version = "1", features = ["derive"] }
