[package]
name = "build_bouy_metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest         = { version = "0.11.11", features = ["blocking"] }
serde           = "1.0"
serde_json      = "1.0"
serde_derive    = "1.0"
scraper         = "0.13.0"
rusqlite        = { version = "0.28.0", features = ["load_extension"] }