[package]
name = "index_bouy_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono          = { version = "0.4" }
chrono-tz       = { version = "0.4" }
reqwest         = { version = "0.11.11", features = ["blocking", "gzip", "stream"] }
flate2          = { version = "1.0.24" }
sqlite          = { version = "0.26.0" }
